--- a/.hintrc
+++ b/.hintrc
@@ -9,6 +9,13 @@
       {
         "button-name": "off"
       }
-    ]
+    ],
+    "axe/forms": [
+      "default",
+      {
+        "label": "off"
+      }
+    ],
+    "button-type": "off"
   }
 }
